--- a/404.md
+++ b/404.md
@@ -1,10 +1,7 @@
 ---
 layout: content
-title: "404: Page not found"
+title: ""
 ---
-
-Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.
-
 <p align="center">
   <img src="https://github.com/kgusman/kgusman.github.io/blob/master/assets/404.jpg?raw=true">
 </p>
