--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: content
 title: ""
 ---
 <p align="center">
-  <img src="https://github.com/kgusman/kgusman.github.io/blob/master/assets/404.jpg?raw=true">
+  <img src="https://github.com/kgusman/kgusman.github.io/blob/master/assets/404.jpg?raw=true" height="50%" width="50%">
 </p>
 
